# PhotoMode

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CREDITS.md  README.md  vcpkg.json
.github/workflows/: main.yml  maintenance.yml  nexus-upload.yaml  vr-pack.yml
Skyrim/Data/Interface/Translations/: PhotoMode_ENGLISH.txt
Skyrim/Data/Interface/tweenoptions/: po3_photomode.json
Skyrim/Data/MCM/Config/PhotoMode/: config.json  settings.ini
Skyrim/Data/Source/Scripts/: PhotoMode_DEBUG_ToggleMenu.psc  PhotoMode_MCM.psc  po3_photomode.psc
cmake/: headerlist.cmake  sourcelist.cmake  version.rc.in
src/: Graphics.cpp  Hooks.cpp  Input.cpp  PCH.h  main.cpp
src/ImGui/: Graphics.cpp  Renderer.cpp  Util.cpp  VRHelper.cpp  VRHelper.h  Widgets.cpp
src/PhotoMode/: Manager.cpp  Manager.h  PlayerClone.cpp  PlayerClone.h
src/PhotoMode/Tabs/: Camera.cpp  CameraPositions.cpp  CameraPositions.h  Character.cpp  Filters.cpp  Time.cpp
src/Screenshots/: LoadScreen.cpp  LoadScreen.h  Manager.cpp
